2011-05-08 Philipp Klaus Krause <pkk@spth.de>

	* src/z80/ralloc2.cc
	  Fixed over-eager early HLinst_OK() use.

2011-05-08 Philipp Klaus Krause <pkk@spth.de>

	* Merge from trunk.

2011-05-06 Philipp Klaus Krause <pkk@spth.de>

	* src/z80/gen.c:
	  Remove some leftover debug stuff.
	* src/z80/peeph-z80.def:
	  Generalize optimization of bit setting and resetting.

2011-05-06 Philipp Klaus Krause <pkk@spth.de>

	* Merge everything except src/z80/gen.c from trunk,
	  but mark gen.c as merged, so that further changes in gen.c
	  will be merged.

2011-05-03 Philipp Klaus Krause <philipp AT informatik.uni-frankfurt.de>

	* src/SDCCralloc.hpp,
	  src/z80/ralloc2.cc
	  Improved performance, reduced memory usage.

2011-05-02 Borut Razem <borut.razem AT gmail.com>

	* configure.in, configure:
	  don't use "-pipe" on x86 Solaris g++, since src/z80/ralloc2.cc dies

2011-04-29 Philipp Klaus Krause <pkk@spth.de>

	* Merge everything except src/z80/gen.c from trunk.

2011-04-29 Philipp Klaus Krause <pkk@spth.de>

	* src/SDCCralloc.hpp,
	  src/z80/ralloc2.cc
	  Some performance improvements.

2011-04-25 Philipp Klaus Krause <pkk@spth.de>

	* Merge everything except src/z80/gen.c from trunk.

2011-04-25 Maarten Brock <sourceforge.brock AT dse.nl>

	* debugger/mcs51/cmd.c,
	* debugger/mcs51/symtab.c,
	* src/z80/ralloc2.cc: fixed some warnings
	* sdas/linksrc/aslink.vcxproj,
	* sdas/linksrc/aslink.vcxproj.filters: added lksdcdb.c
	* src/src.vcxproj,
	* src/src.vcxproj.filters,
	* sdcc.sln: added dependencies on config, removed avr & xa51
	* sdcc_vc_in.h: set OPT_DISABLE_AVR & OPT_DISABLE_XA51
	* src/pic14/ralloc.h: fixed rename of struct regs to reg_info
	* src/z80/gen.c: replaced true/false with TRUE/FALSE

2011-04-21 Philipp Klaus Krause <pkk@spth.de>

	* src/SDCCdebug.h,
	  src/mcs51/gen.c,
	  src/mcs51/ralloc.c,
	  src/mcs51/gen.h,
	  src/mcs51/ralloc.h,
	  src/mcs51/main.c,
	  src/mcs51/rtrack.c,
	  src/SDCCsymt.h,
	  src/SDCCdwarf2.c,
	  src/port.h,
	  src/pic14/pcode.h,